--- a/Image-Text-Viewer/pom.xml
+++ b/Image-Text-Viewer/pom.xml
@@ -54,6 +54,13 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		
+		<dependency>
+    		<groupId>net.sourceforge.tess4j</groupId>
+    		<artifactId>tess4j</artifactId>
+    		<version>3.4.2</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
