--- a/Image-Text-Viewer/pom.xml
+++ b/Image-Text-Viewer/pom.xml
@@ -11,7 +11,6 @@
 	<groupId>com.project.imageTextViewer</groupId>
 	<artifactId>Image-Text-Viewer</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
 	<name>Image-Text-Viewer</name>
 	<description>Demo project for Spring Boot</description>
 
@@ -50,7 +49,12 @@
 		<dependency>
     		<groupId>net.sourceforge.tess4j</groupId>
     		<artifactId>tess4j</artifactId>
-    		<version>3.4.2</version>
+    		<version>3.0.0</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
 		
 	</dependencies>
